--- a/02himedia/css/style.css
+++ b/02himedia/css/style.css
@@ -3,7 +3,7 @@
 body{font-family: 'Nanum Gothic', sans-serif;}
 
 /* header */
-.headerTopWrap{border-bottom: 1px solid #dcdcdc;}
+.headerTopWrap{border-bottom: 1px solid #dcdcdc;margin-bottom: 16px;}
 .headerTop{width: 980px;margin: 0 auto;}
 .topMenu ul{float: right;}
 .topMenu li{float: left;position: relative;}
@@ -11,4 +11,32 @@ body{font-family: 'Nanum Gothic', sans-serif;}
     content: "";display: block;width: 1px;height: 11px;background-color: #dcdcdc;
     position: absolute;top: 7px;right: 0;
 }
+.topMenu li:last-child::after{display: none;}
 .topMenu li a{display: block;padding: 7px 10px;font-size: 12px;line-height: 12px;}
+
+#headerWrap h1{margin: 0 auto;width: 151px; margin-bottom: 16px;}
+#headerWrap h1 a{color: #333;}
+/* #headerWrap .toggleWrap{width: 980px;position: relative;margin: 0 auto;} */
+#headerWrap .toggle{
+    width: 48px;height: 48px;border: 1px solid #cdcdcd;
+    position: absolute;left: calc( 50% + 442px );top: 38px;
+    cursor: pointer;
+}
+.toggle div{
+    width: 20px;height: 2px;background-color: #666;
+    position: absolute;left:calc( 50% - 10px);
+    top: calc( 50% - 1px );
+    
+
+}
+.toggle div:first-child{top: calc( 50% - 9px );}
+.toggle div:last-child{top: calc( 50% + 7px );}
+
+.mainMenuWrap{background-color: #1D5DA4;}
+.mainMenuWrap .mainMenu{width: 980px;margin: 0 auto;}
+.mainMenuWrap ul{}
+.mainMenuWrap li{float: left;width: calc( 100% / 6 ); border-left: 1px solid #336dac;}
+.mainMenuWrap .mainMenu li a{color: #eaeef4; line-height: 45px;text-align: center;display: block;}
+
+
+
