--- a/02himedia/css/style.css
+++ b/02himedia/css/style.css
@@ -39,5 +39,39 @@ body{font-family: 'Nanum Gothic', sans-serif;}
 .mainMenuWrap li:last-child{border-right: 1px solid #336dac;}
 .mainMenuWrap .mainMenu li a{color: #eaeef4; line-height: 45px;text-align: center;display: block;}
 
+.visualWrap{
+    /* background-image: url(../images/main_bg01.jpg);background-repeat: no-repeat;background-position: center;background-color: #213C6b; */
+    background: #213C6b url(../images/main_bg01.jpg) no-repeat center;}
+.visualWrap .visual{width: 980px;height: 400px;margin: 0 auto;position: relative;overflow: hidden;}
+.visualWrap .visual .txt{position: absolute;top: 100px;color: #eff0ee;font-size: 20px;}
+.visualWrap .visual h2{line-height: 80px;font-size: 76.6px;letter-spacing: 0.34em;margin-bottom: 10px;}
+.visualWrap .visual img{position: absolute;right: 0;}
 
+.boxWrap{background-color: #BEBEBE;margin-bottom: 50px;}
+.boxWrap .box{width: 980px;margin: 0 auto;}
+.boxWrap ul{width: 196px;height: 196px;text-align: center; float: left;color: #fee;}
+.boxWrap img{padding: 20px 48px 14px 48px}
+.boxWrap h3{margin-bottom: 6px;font-size: 17px;}
+.boxWrap p{font-size: 14px;letter-spacing: -5%;font-weight: 500;}
+.boxWrap .box1{background-color: #637A94;}
+.boxWrap .box2{background-color: #4F74A1;}
+.boxWrap .box3{background-color: #4B8CE0;}
+.boxWrap .box4{background-color: #3DB5F2;}
+.boxWrap .box5{background-color: #95C8FF;}
 
+.secWrap{width: 980px;margin: 0 auto;}
+.secWrap ul{float: left;margin-right: 25px;}
+.secWrap ul:last-child{margin-right: 0;}
+
+.sec01{margin-bottom: 20px;}
+.secWrap .txt01{width: 310px;height: 100px; padding: 20px 14px;border: 1px solid #DDDDDD; }
+.secWrap .txt01 h4{font-size: 16px;color: #494949;padding-bottom: 5px;}
+.secWrap .txt01 p{font-size: 12px;line-height: 20px;letter-spacing: 2%;color: #9B9B9B; font-weight: 700;}
+
+.sec02{margin-bottom: 20px;}
+.secWrap .txt02{width: 310px;height: 164px;border: 1px solid #DDDDDD;position: relative;}
+.secWrap .txt02 li{margin-left: 14px;}
+.secWrap .txt02 h4{font-size: 18px;color: #333333;padding-bottom: 5px;padding: 20px 0;}
+.secWrap .txt02 p{font-size: 12px;line-height: 20px;letter-spacing: 1%;color: #9B9B9B; font-weight: 700;}
+.secWrap .txt02 a{font-size: 12px;color: #3DB5F2; font-weight: 700;padding: 20px 0;}
+.secWrap .txt02 img{position: absolute; top: 0px; right: -15px;}
