--- a/02himedia/css/style.css
+++ b/02himedia/css/style.css
@@ -75,3 +75,5 @@ body{font-family: 'Nanum Gothic', sans-serif;}
 .secWrap .txt02 p{font-size: 12px;line-height: 20px;letter-spacing: 1%;color: #9B9B9B; font-weight: 700;}
 .secWrap .txt02 a{font-size: 12px;color: #3DB5F2; font-weight: 700;padding: 20px 0;}
 .secWrap .txt02 img{position: absolute; top: 0px; right: -15px;}
+
+.footerWrap{height: 43px; background-color: #4D4D4D;}
