--- a/04college/css/style.css
+++ b/04college/css/style.css
@@ -4,28 +4,33 @@
 .headerTopWrap{height: 40px;background-color: #740321;}
 .headerTop{width: 1200px; height: 40px;margin: 0 auto;}
 
-.navbarMenu1 li{float: left;width: 120px;background-color: aqua;line-height: 40px;text-align: center;margin-right: 2px;font-weight: bold;}
-.navbarMenu1 a{color: white;}
-.navbarMenu1 li:last-child{margin-right: 0;}
+.navbarMenu1>ul>li{float: left;width: 120px;background-color: #4A0217;line-height: 40px;text-align: center;margin-right: 2px;font-weight: bold;}
+.navbarMenu1>ul>li>a{color: white;}
+.navbarMenu1>ul>li:nth-child(1){background-color: white;}
+.navbarMenu1>ul>li:nth-child(1)>a{color: black;}
+.navbarMenu1>ul>li:last-child{margin-right: 0;}
+.navbarMenu1>ul>li>a:hover{display: block;width: 120px;height: 40px;background-color: white;color: black;}
+
 
 .navbarMenu2 {width: 292px;float: right;}
 .navbarMenu2 li{float: left;line-height: 40px;font-size: 12px;text-align: center;}
-.navbarMenu2 li:nth-child(1){width: 17%; margin-right: 0px;}
-.navbarMenu2 li:nth-child(2){width: 18%; margin-right: 0px;}
-.navbarMenu2 li:nth-child(3){width: 25%; margin-right: 0px;}
-.navbarMenu2 li:nth-child(4){width: 20%; margin-right: 0px;}
-.navbarMenu2 li:nth-child(5){width: 20%; margin-right: 0px;}
+.navbarMenu2>ul>li:nth-child(1){width: 17%; margin-right: 0px;}
+.navbarMenu2>ul>li:nth-child(2){width: 18%; margin-right: 0px;}
+.navbarMenu2>ul>li:nth-child(3){width: 25%; margin-right: 0px;}
+.navbarMenu2>ul>li:nth-child(4){width: 20%; margin-right: 0px;}
+.navbarMenu2>ul>li:nth-child(5){width: 20%; margin-right: 0px;}
 
-.navbarMenu2 a{color: white;}
-.navbarMenu2 p{display: inline-block;width: 16px;height: 16px;background-color: white;margin-right: 1px;text-align: center;line-height: 16px;}
+.navbarMenu2>ul>li>a{color: white;}
+.navbarMenu2>ul>li>p{display: inline-block;width: 16px;height: 16px;background-color: white;margin-right: 1px;text-align: center;line-height: 16px;}
+.navbarMenu2>ul>p>a{color: black;display: block;}
 
 .titleWrap{height: 118px;}
 .title{width: 1200px;margin: 0 auto;}
-.titleLogo>h1{width: 280px;padding: 20px 0; background-color: khaki;}
-.titleLogo img{width: 280px;height: 78px;}
+.titleLogo>h1{width: 280px;padding: 20px 0;}
+.titleLogo>h1>a>img{width: 280px;height: 78px;}
 .titleLogo{float: left;}
 .titleMenu{float: right;}
-.titleMenu li{float: left;line-height: 118px;font-size: 18px;font-weight: bold;margin-right: 52px;}
+.titleMenu>ul>li{float: left;line-height: 118px;font-size: 18px;font-weight: bold;margin-right: 52px;}
 
 /* .visualBg{width: 1500px;height: 1300px;margin: 0 auto;background-image: url(../images/bgimg.jpg);background-size: cover;position: relative;}
 .visualBg>img{width: 100%;height: 1300px;opacity: 0.5;position: relative;}
@@ -49,13 +54,30 @@
 .sec02>ul>li:nth-child(1){width: 900px;height: 450px;background-image: url(../images/sec01.jpg);padding: 84px;}
 .sec02 h3{font-size: 72px;font-weight: 400;color: #740321;line-height: 72px;margin-bottom: 20px;}
 .sec02 span{font-weight: bold;}
-.sec02 .bt01{width: 168px;height: 40px;border: 0;background-color: #740321;color: white;}
+.sec02 .bt01{width: 168px;height: 40px;border: 0;background-color: #740321;}
+.sec02 .bt01>a{display: block;color: white;}
 
-.sec02>ul>li:nth-child(2){width: 300px; height: 450px;background-image: url(../images/sec02.png);background-position-x: -200px;padding: 75px 35px;}
+.sec02>ul>li:nth-child(2){width: 300px; height: 450px;background-image: url(../images/sec02.png);background-position-x: -200px;display: flex;justify-content: center;align-items: center;}
 .sec02 .Txt01{width: 230px;height: 300px;}
 .sec02 h4{font-size: 35px;font-weight: 100;color: white;margin-bottom: 20px;}
 .sec02 p{font-size: 16px;color: white;margin-bottom: 20px;}
-.sec02 .bt02{width: 168px;height: 40px;border: 0;background-color: #740321;color: white;}
+.sec02 .bt02{width: 168px;height: 40px;border: 0;background-color: #740321;}
+.sec02 .bt02>a{color: white;display: block;}
 
-.sec02>ul>li:nth-child(3){padding: 22px 15px}
-.sec02 .Txt02{}
+.sec02>ul>li:nth-child(3){padding: 20px 15px;}
+.sec02 .Txt02{width: 270PX;height: 185px;;background-color: darkcyan;}
+.sec02 .Txt02>P{font-size: 24px;font-weight: bold;color: white;}
+
+.subIcon{width: 226px;height: 129px;background-color: pink;margin: 0 auto;padding-top: 12px;}
+.subIcon li{float: left;text-align: center;margin-right: 20px;}
+.subIcon li:last-child{margin-right: 0;}
+.subIcon img{margin-bottom: 5px;}
+.subIcon a{display: block; color: white;font-size: 12px;line-height: 18px;}
+
+.sec02>ul>li:nth-child(4){padding: 20px 15px;background-color: #8d314c;}
+.sec02 .Txt03{width: 270PX;height: 185px;;background-color: darkcyan;}
+.sec02 .Txt03>P{font-size: 24px;font-weight: bold;color: white;}
+.sec02 .Txt03>.info{width: 270px;height: 129px;border-top: 3px solid white;}
+.sec02 .Txt03 li>.clrcle{width: 4px;height: 4px;background-color: white;display: inline-block;margin: 2px 10px 2px 0px;}
+.sec02 .Txt03 li{color: white;font-size: 12px;padding-top: 15px;}
+.sec02 .Txt03 span{float: right;margin-right: 15px;}
