--- a/04college/css/style.css
+++ b/04college/css/style.css
@@ -38,7 +38,7 @@
 
 .visualBg{height: 1300px;margin: 0 auto;background-image: url(../images/bgimg.jpg);background-size: cover;background-position: center;position: relative;}
 .visualBg>img{width: 100%;height: 1300px;opacity: 0.3;}
-.contentWrap{width: 1200px;height: 1160px;background-color: pink;position: absolute;top: 0;left: 50%;transform: translateX(-50%);}
+.contentWrap{width: 1200px;height: 1450px;background-color: pink;position: absolute;top: 0;left: 50%;transform: translateX(-50%);}
 .sec01{width: 1200px;height: 258px;padding: 69px 0;background-color: #740321;}
 
 .sec01 h2{font-size: 45px;font-weight: 100;color: white;float: left;}
@@ -68,7 +68,7 @@
 .sec02 .Txt02{width: 270PX;height: 185px;;background-color: darkcyan;}
 .sec02 .Txt02>P{font-size: 24px;font-weight: bold;color: white;}
 
-.subIcon{width: 226px;height: 129px;background-color: pink;margin: 0 auto;padding-top: 12px;}
+.subIcon{width: 226px;height: 133px;background-color: pink;margin: 0 auto;padding-top: 12px;}
 .subIcon li{float: left;text-align: center;margin-right: 20px;}
 .subIcon li:last-child{margin-right: 0;}
 .subIcon img{margin-bottom: 5px;}
@@ -77,7 +77,30 @@
 .sec02>ul>li:nth-child(4){padding: 20px 15px;background-color: #8d314c;}
 .sec02 .Txt03{width: 270PX;height: 185px;;background-color: darkcyan;}
 .sec02 .Txt03>P{font-size: 24px;font-weight: bold;color: white;}
-.sec02 .Txt03>.info{width: 270px;height: 129px;border-top: 3px solid white;}
+.sec02 .Txt03>.info{width: 270px;height: 133px;border-top: 3px solid white;}
 .sec02 .Txt03 li>.clrcle{width: 4px;height: 4px;background-color: white;display: inline-block;margin: 2px 10px 2px 0px;}
 .sec02 .Txt03 li{color: white;font-size: 12px;padding-top: 15px;}
 .sec02 .Txt03 span{float: right;margin-right: 15px;}
+
+.sec02>ul>li:nth-child(5){padding: 20px 15px;background-color: white;}
+.sec02 .Txt04{width: 270PX;height: 185px;;background-color: darkcyan;}
+.sec02 .Txt04>P{font-size: 24px;font-weight: bold;color: #8d314c;letter-spacing: -1px;}
+.sec02 .Txt04>.info{width: 270px;height: 133px; background-color: aquamarine;}
+.sec02 .Txt04 img{width: 116px;height: 80px;margin-right: 16px;float: left;}
+.sec02 .Txt04 .subTex{font-size: 14px;background-color: pink;height: 80px;padding: 4px 0;}
+.sec02 .Txt04 .linkIcon{display: flex;padding: 22px 0;justify-content: flex-end;}
+.sec02 .Txt04 .linkIcon img{width: 30px;height: 30px;margin-right: 0;margin-left: 5px;}
+
+.sec02>ul>li:nth-child(6){background-image: url(../images/캠퍼스투어.png);display: flex;align-items: flex-end;}
+.sec02>ul>li:nth-child(6)>a{display: block;margin: 0 auto;font-size: 20px;line-height: 52px;color: white;}
+
+.sec02>ul>li:nth-child(7){background-image: url(../images/image.png);}
+
+.sec02>ul>li:nth-child(8){width: 900px;position: relative;}
+.sec02 .Txt05{width: 400px; margin: 50px 37px;position: absolute;}
+.sec02 .Txt05>p{font-size: 33px;color: #8d314c;position: absolute;}
+.sec02 .Txt05>span{font-size: 48px;color: #8d314c;display: block;font-weight: bold;line-height: 100px;}
+.sec02 .bt03{width: 168px;height: 40px;border: 0;background-color: #740321;position: absolute;}
+.sec02 .bt03>a{display: block;color: white;}
+
+
