--- a/05himedia_tour/css/jquery.bxslider.css
+++ b/05himedia_tour/css/jquery.bxslider.css
@@ -94,23 +94,25 @@ ul.bxslider {
 .bx-wrapper .bx-prev {
   left: 10px;
   background: url('../images/controls.png') no-repeat 0 -32px;
+  display: none;
 }
 .bx-wrapper .bx-prev:hover,
 .bx-wrapper .bx-prev:focus {
   background-position: 0 0;
 }
 .bx-wrapper .bx-next {
-  right: 10px;
-  background: url('../images/controls.png') no-repeat -43px -32px;
+  right: 5px;
+  background: url('../images/b\ \(2\).png') no-repeat;
+  background-size: cover;
 }
 .bx-wrapper .bx-next:hover,
 .bx-wrapper .bx-next:focus {
-  background-position: -43px 0;
+  background-position: 0 0;
 }
 .bx-wrapper .bx-controls-direction a {
   position: absolute;
   top: 50%;
-  margin-top: -16px;
+  margin-top: 80px;
   outline: 0;
   width: 32px;
   height: 32px;
